# proj_tethralink

./: CMakeCache.txt  CMakeLists.txt  Makefile  build  cmake_install.cmake  compile_commands.json  edit  project
include/: tethralink.hpp  tethranode.hpp
src/: main.cpp  tethralink.cpp
